# SipMessageCpp

./: README.md  README_CN.md
src/SipMessageCpp/: CMakeLists.txt
src/SipMessageCpp/include/: CSipMsgCpp.hpp  CSipRegisterServerRsp.cpp  CSipRegisterServerRsp.hpp  SipAckMsg.cpp  SipAckMsg.hpp  SipByeMsg.cpp  SipByeMsg.hpp  SipInviteMsg.cpp  SipInviteMsg.hpp  SipMessageBase.cpp  SipMessageBase.hpp  SipMessageUtil.cpp  SipMessageUtil.h  SipMsgBaseStruct.cpp  SipMsgBaseStruct.hpp  SipMsgClientReqBase.cpp  SipMsgClientReqBase.hpp  SipMsgConstValue.hpp  SipOkMsg.cpp  SipOkMsg.hpp  SipProxyAuthorziathinRequireMsg.cpp  SipProxyAuthorziathinRequireMsg.hpp  SipReRegisterMsg.cpp  SipReRegisterMsg.hpp  SipRegisterMsg.cpp  SipRegisterMsg.hpp  SipRingMsg.cpp  SipRingMsg.hpp  SipServerRspBase.cpp  SipServerRspBase.hpp  SipSessionProgressMsg.cpp  SipSessionProgressMsg.hpp  SipSmsMessage.cpp  SipSmsMessage.hpp  SipTryingMsg.cpp  SipTryingMsg.hpp
src/SipMessageCpp/sample/: CMakeLists.txt  simple_cpp_sockets.h  sip_client.cpp  sip_client.h  sip_client_protocal_handler.cpp  sip_client_protocal_handler.h  sip_msg_demo.cpp  sip_phone_demo.cpp
src/SipMessageCpp/tests/: CMakeLists.txt  CSipRegisterServerRsp_test.cpp  SipAckMsg_test.cpp  SipByeMsg_test.cpp  SipInviteMsg_test.cpp  SipMessageBase_test.cpp  SipMsgBaseStruct_test.cpp  SipOkMsg_test.cpp  SipProxyAuthorziathinRequireMsg_test.cpp  SipReRegisterMsg_test.cpp  SipRegisterMsg_test.cpp  SipRingMsg_test.cpp  SipSessionProgressMsg_test.cpp  SipSmsMessage_test.cpp  SipTryingMsg_test.cpp  main.cpp  md5_test.cpp
