cmake_minimum_required(VERSION 3.10)
project(SipMessageCpp)
include_directories(./thirdparty/)
include_directories(./include/)
SET(SIP_BASE_MSG_FILE ./include/SipMessageBase.cpp ./include/SipRegisterMsg.cpp ./include/SipMessageUtil.cpp)
SET(SIP_MSG_TEST_FILE ./tests/SipMessageBase_test.cpp ./tests/SipRegisterMsg_test.cpp)
add_executable(sip_message_cpp_test ./tests/main.cpp  ${SIP_MSG_TEST_FILE} ${SIP_BASE_MSG_FILE})